--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Created by Colm Larkin
+colm@gambrinous.com
+Twitter: @gambrinous
+
 Sources
 
 Bird sprite: http://opengameart.org/content/animated-birds-32x32
