--- a/README
+++ b/README
@@ -2,8 +2,10 @@ Created by Colm Larkin
 colm@gambrinous.com
 Twitter: @gambrinous
 
-Sources
+Using Flixel v2.55 + Flixel Power Tools
+
+Assets sourced from:
 
 Bird sprite: http://opengameart.org/content/animated-birds-32x32
 All fish sprites: http://www.widgetworx.com/widgetworx/portfolio/spritelib.html
-Font: http://www.dafont.com/venue-on-the-beach.font
+Title screen font: http://www.dafont.com/venue-on-the-beach.font
