--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 Created by Colm Larkin
 colm@gambrinous.com
-Twitter: @gambrinous
+twitter.com/gambrinous
 
-Using Flixel v2.55 + Flixel Power Tools
+Using Flixel v2.55 + Flixel Power Tools:
+http://www.photonstorm.com/flixel-power-tools
 
 Assets sourced from:
-
 Bird sprite: http://opengameart.org/content/animated-birds-32x32
 All fish sprites: http://www.widgetworx.com/widgetworx/portfolio/spritelib.html
 Title screen font: http://www.dafont.com/venue-on-the-beach.font
