--- a/README
+++ b/README
@@ -5,7 +5,10 @@ twitter.com/gambrinous
 Using Flixel v2.55 + Flixel Power Tools:
 http://www.photonstorm.com/flixel-power-tools
 
+Embeddable .wavs with http://code.google.com/p/as3wavsound/
+	
 Assets sourced from:
 Bird sprite: http://opengameart.org/content/animated-birds-32x32
 All fish sprites: http://www.widgetworx.com/widgetworx/portfolio/spritelib.html
 Title screen font: http://www.dafont.com/venue-on-the-beach.font
+Sounds: http://www.freesound.org/
