--- a/README
+++ b/README
@@ -2,6 +2,12 @@ Created by Colm Larkin
 colm@gambrinous.com
 twitter.com/gambrinous
 
+Created during the 12 hour game jam Gamecraft:
+http://dublingamecraft.com/about/
+	
+Find out more here:
+http://blog.gambrinous.com/2012/12/04/seabird-plunge-a-flash-game-with-source/
+
 Using Flixel v2.55 + Flixel Power Tools:
 http://www.photonstorm.com/flixel-power-tools
 
